--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@ h1 {
 p {
   font-family: verdana;
   font-size: 20px;
+  text-align: center;
 }
 </style>
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+<h1>This is a hosted website!</h1>
+<p>Are you all excited?????</p>
 
 </body>
 </html>
